force-app/main/default/objects/Sales_Goal_Data__c/fields/YTD_Open_Shipped__c.field-meta.xml
<CustomField>
    <fullName>YTD_Open_Shipped__c</fullName>
    <description>Indicates the total amount of open and shipped orders for the fiscal year.</description>
    <formula>YTD_OPEN__c + YTD_SHIPPED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Open/Shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>