force-app/main/default/objects/Sales_Goal_Data__c/fields/YTD_OPP_LOW__c.field-meta.xml
<CustomField>
    <fullName>YTD_OPP_LOW__c</fullName>
    <description>Total amount of all opportunities for the year that have a probability &gt;= 0% and &lt; 30%</description>
    <label>YTD_OPP_LOW</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>