force-app/main/default/objects/Sales_Goal_Data__c/fields/YTD_OPP_MED__c.field-meta.xml
<CustomField>
    <fullName>YTD_OPP_MED__c</fullName>
    <description>Total amount of all opportunities for the year that have a probability &gt;= 30% and &lt; 60%</description>
    <label>YTD_OPP_MED</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>