force-app/main/default/objects/Sales_Goal_Data__c/fields/YTD_OPPORTUNITY__c.field-meta.xml
<CustomField>
    <fullName>YTD_OPPORTUNITY__c</fullName>
    <description>Total amount of opportunities for the fiscal year.</description>
    <label>YTD_OPPORTUNITY</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>