force-app/main/default/objects/Sales_Goal_Data__c/fields/YTD_Over_Under_to_Quota__c.field-meta.xml
<CustomField>
    <fullName>YTD_Over_Under_to_Quota__c</fullName>
    <description>Dollar amount remaining until hitting the yearly Quota.</description>
    <formula>YTD_Performance__c - YTD_GOAL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD $ Over/(Under) Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>