force-app/main/default/objects/Sales_Goal_Data__c/fields/YTD_PENDING__c.field-meta.xml
<CustomField>
    <fullName>YTD_PENDING__c</fullName>
    <description>Total amount of pending orders for the fiscal year.</description>
    <label>YTD_PENDING</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>