force-app/main/default/objects/Sales_Goal_Data__c/fields/YTD_Percent_to_Quota__c.field-meta.xml
<CustomField>
    <fullName>YTD_Percent_to_Quota__c</fullName>
    <description>Indicates the percentage of YTD sales relative to the goal for the year</description>
    <formula>IF( YTD_Performance__c = 0, 0, YTD_Performance__c /YTD_GOAL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD % to Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>