force-app/main/default/objects/Sales_Goal_Data__c/fields/YTD_Performance__c.field-meta.xml
<CustomField>
    <fullName>YTD_Performance__c</fullName>
    <description>Indicates the total amount of YTD sales for comparison against the quarterly goal.</description>
    <formula>YTD_OPEN__c +  YTD_SHIPPED__c +  YTD_INVOICED_RAW__c +  YTD_ADJUSTMENT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Performance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>