force-app/main/default/objects/Sales_Goal_Data__c/fields/YTD_SHIPPED__c.field-meta.xml
<CustomField>
    <fullName>YTD_SHIPPED__c</fullName>
    <description>Total amount of shipped orders for the fiscal year.</description>
    <label>YTD_SHIPPED</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>